package com.example.androidassignments.utils;

import android.util.Patterns;

public class Helper {
    public boolean isValidPassword(String password) {
        return !password.isEmpty();
    }
}
